--- a/FindTheClueAPI/Views/Home/Index.cshtml
+++ b/FindTheClueAPI/Views/Home/Index.cshtml
@@ -22,3 +22,8 @@
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
     </div>
 </div>
+
+<div>
+    @Html.ActionLink("List of players", "Index", "Players")<br />
+    @Html.ActionLink("List of teams", "Index", "Teams")
+</div>
