Published updated web api to azure (updated references for the publish to work)

--- a/FindTheClueAPI/Views/Home/Index.cshtml
+++ b/FindTheClueAPI/Views/Home/Index.cshtml
@@ -24,6 +24,9 @@
 </div>
 
 <div>
+    @Html.ActionLink("List of admins", "Index", "Admins")<br />
+    @Html.ActionLink("List of games", "Index", "Games")<br />
+    @Html.ActionLink("List of questions", "Index", "Questions")<br />
     @Html.ActionLink("List of players", "Index", "Players")<br />
     @Html.ActionLink("List of teams", "Index", "Teams")
 </div>
