--- a/FindTheClueAPI/Views/Questions/Details.cshtml
+++ b/FindTheClueAPI/Views/Questions/Details.cshtml
@@ -43,6 +43,22 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.longitude)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.longitude)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.latitude)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.latitude)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.game.name)
         </dt>
 
